# BlockRegionGrowth

./: CMakeLists.txt
BlkFilePlugin/: BlkFilePluginInterface.cpp  BlkFilePluginInterface.h  CMakeLists.txt
RawGrowth/: CMakeLists.txt  main.cpp
Subregion/: CMakeLists.txt  main.cpp
src/: BlockAddressing.h  BlockDataReader.h  BlockDataWriter.h  CMakeLists.txt  json_struct.h  main.cpp
